Node windows install

--- a/Devsetup/config.json
+++ b/Devsetup/config.json
@@ -28,7 +28,7 @@
         },
         "Installation":{
            "Path": "C:\\Users\\vmari\\Desktop",
-           "Variables":["Vcode"]
+           "Variables":["Nodezip"]
         }
     },
     "Java-JDK": {
